// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`events CRUD > applies defaults for a minimal event 1`] = `
{
  "body": {
    "data": {
      "broadcast_station": "null",
      "broadcast_station_id": "null",
      "broadcast_station_logo_url": "null",
      "broadcast_station_name": "null",
      "created_at": "datetime(.000000Z)",
      "date": "datetime(.000000Z)",
      "description": "null",
      "end_date": "null",
      "eventType": "string",
      "event_type": "string",
      "expectedParticipants": "number",
      "expected_participants": "number",
      "id": "uuid",
      "image": "null",
      "isTournament": "boolean",
      "is_tournament": "boolean",
      "location": "string",
      "main_sponsor": "null",
      "main_sponsor_id": "null",
      "main_sponsor_logo_url": "null",
      "main_sponsor_name": "null",
      "name": "string",
      "organizer": {
        "club_id": "null",
        "created_at": "datetime(.000000Z)",
        "email": "string",
        "full_name": "string",
        "id": "uuid",
        "last_login": "datetime(sql)",
        "role": "string",
        "status": "string",
        "updated_at": "datetime(.000000Z)",
        "username": "string",
      },
      "organizer_id": "uuid",
      "organizer_name": "string",
      "sponsorIds": [],
      "sponsors": [],
      "status": "string",
      "tournamentFormat": "null",
      "tournamentWeightClass": "null",
      "tournament_format": "null",
      "tournament_weight_class": "null",
      "updated_at": "datetime(.000000Z)",
    },
    "success": "boolean",
  },
  "status": 201,
}
`;

exports[`events CRUD > creates an event with sponsors and a broadcast station 1`] = `
{
  "body": {
    "data": {
      "broadcast_station": {
        "active": "boolean",
        "contact_email": "null",
        "contact_person": "null",
        "contact_phone": "null",
        "created_at": "datetime(.000000Z)",
        "id": "uuid",
        "image": "null",
        "logo_url": "string",
        "name": "string",
        "reach": "string",
        "stream_url": "null",
        "type": "string",
        "updated_at": "datetime(.000000Z)",
        "website_url": "null",
      },
      "broadcast_station_id": "uuid",
      "broadcast_station_logo_url": "string",
      "broadcast_station_name": "string",
      "created_at": "datetime(.000000Z)",
      "date": "datetime(.000000Z)",
      "description": "string",
      "end_date": "datetime(.000000Z)",
      "eventType": "string",
      "event_type": "string",
      "expectedParticipants": "number",
      "expected_participants": "number",
      "id": "uuid",
      "image": "string",
      "isTournament": "boolean",
      "is_tournament": "boolean",
      "location": "string",
      "main_sponsor": {
        "active": "boolean",
        "contact_email": "null",
        "contact_person": "null",
        "contact_phone": "null",
        "created_at": "datetime(.000000Z)",
        "id": "uuid",
        "image": "null",
        "industry": "null",
        "logo_url": "string",
        "name": "string",
        "tier": "string",
        "updated_at": "datetime(.000000Z)",
        "website_url": "null",
      },
      "main_sponsor_id": "uuid",
      "main_sponsor_logo_url": "string",
      "main_sponsor_name": "string",
      "name": "string",
      "organizer": {
        "club_id": "null",
        "created_at": "datetime(.000000Z)",
        "email": "string",
        "full_name": "string",
        "id": "uuid",
        "last_login": "datetime(sql)",
        "role": "string",
        "status": "string",
        "updated_at": "datetime(.000000Z)",
        "username": "string",
      },
      "organizer_id": "uuid",
      "organizer_name": "string",
      "sponsorIds": [
        "uuid",
      ],
      "sponsors": [
        {
          "active": "boolean",
          "contact_email": "null",
          "contact_person": "null",
          "contact_phone": "null",
          "created_at": "datetime(.000000Z)",
          "id": "uuid",
          "image": "null",
          "industry": "null",
          "logo_url": "string",
          "name": "string",
          "pivot": {
            "event_id": "uuid",
            "sponsor_id": "uuid",
          },
          "tier": "string",
          "updated_at": "datetime(.000000Z)",
          "website_url": "null",
        },
        {
          "active": "boolean",
          "contact_email": "null",
          "contact_person": "null",
          "contact_phone": "null",
          "created_at": "datetime(.000000Z)",
          "id": "uuid",
          "image": "null",
          "industry": "null",
          "logo_url": "null",
          "name": "string",
          "pivot": {
            "event_id": "uuid",
            "sponsor_id": "uuid",
          },
          "tier": "string",
          "updated_at": "datetime(.000000Z)",
          "website_url": "null",
        },
      ],
      "status": "string",
      "tournamentFormat": "string",
      "tournamentWeightClass": "string",
      "tournament_format": "string",
      "tournament_weight_class": "string",
      "updated_at": "datetime(.000000Z)",
    },
    "success": "boolean",
  },
  "status": 201,
}
`;

exports[`events CRUD > deletes an event (Super Admin only) 1`] = `
{
  "body": {
    "data": {
      "broadcast_station_id": "uuid",
      "created_at": "datetime(.000000Z)",
      "date": "datetime(.000000Z)",
      "description": "string",
      "end_date": "datetime(.000000Z)",
      "event_type": "string",
      "expected_participants": "number",
      "id": "uuid",
      "image": "string",
      "is_tournament": "boolean",
      "kkf_approval_date": "null",
      "kkf_approved_by": "null",
      "location": "string",
      "main_sponsor_id": "uuid",
      "name": "string",
      "organizer_id": "uuid",
      "status": "string",
      "tournament_format": "string",
      "tournament_weight_class": "string",
      "updated_at": "datetime(.000000Z)",
    },
    "message": "string",
    "success": "boolean",
  },
  "status": 200,
}
`;

exports[`events CRUD > lists and shows events publicly > list item 1`] = `
{
  "broadcast_station": {
    "active": "boolean",
    "contact_email": "null",
    "contact_person": "null",
    "contact_phone": "null",
    "created_at": "datetime(.000000Z)",
    "id": "uuid",
    "image": "null",
    "logo_url": "string",
    "name": "string",
    "reach": "string",
    "stream_url": "null",
    "type": "string",
    "updated_at": "datetime(.000000Z)",
    "website_url": "null",
  },
  "broadcast_station_id": "uuid",
  "broadcast_station_logo_url": "string",
  "broadcast_station_name": "string",
  "created_at": "datetime(.000000Z)",
  "date": "datetime(.000000Z)",
  "description": "string",
  "end_date": "datetime(.000000Z)",
  "eventType": "string",
  "event_type": "string",
  "expectedParticipants": "number",
  "expected_participants": "number",
  "id": "uuid",
  "image": "string",
  "isTournament": "boolean",
  "is_tournament": "boolean",
  "kkf_approval_date": "null",
  "kkf_approved_by": "null",
  "location": "string",
  "main_sponsor": {
    "active": "boolean",
    "contact_email": "null",
    "contact_person": "null",
    "contact_phone": "null",
    "created_at": "datetime(.000000Z)",
    "id": "uuid",
    "image": "null",
    "industry": "null",
    "logo_url": "string",
    "name": "string",
    "tier": "string",
    "updated_at": "datetime(.000000Z)",
    "website_url": "null",
  },
  "main_sponsor_id": "uuid",
  "main_sponsor_logo_url": "string",
  "main_sponsor_name": "string",
  "name": "string",
  "organizer": {
    "club_id": "null",
    "created_at": "datetime(.000000Z)",
    "email": "string",
    "full_name": "string",
    "id": "uuid",
    "last_login": "datetime(sql)",
    "role": "string",
    "status": "string",
    "updated_at": "datetime(.000000Z)",
    "username": "string",
  },
  "organizer_id": "uuid",
  "organizer_name": "string",
  "sponsorIds": [
    "uuid",
  ],
  "sponsors": [
    {
      "active": "boolean",
      "contact_email": "null",
      "contact_person": "null",
      "contact_phone": "null",
      "created_at": "datetime(.000000Z)",
      "id": "uuid",
      "image": "null",
      "industry": "null",
      "logo_url": "string",
      "name": "string",
      "pivot": {
        "event_id": "uuid",
        "sponsor_id": "uuid",
      },
      "tier": "string",
      "updated_at": "datetime(.000000Z)",
      "website_url": "null",
    },
    {
      "active": "boolean",
      "contact_email": "null",
      "contact_person": "null",
      "contact_phone": "null",
      "created_at": "datetime(.000000Z)",
      "id": "uuid",
      "image": "null",
      "industry": "null",
      "logo_url": "null",
      "name": "string",
      "pivot": {
        "event_id": "uuid",
        "sponsor_id": "uuid",
      },
      "tier": "string",
      "updated_at": "datetime(.000000Z)",
      "website_url": "null",
    },
  ],
  "status": "string",
  "tournamentFormat": "string",
  "tournamentWeightClass": "string",
  "tournament_format": "string",
  "tournament_weight_class": "string",
  "updated_at": "datetime(.000000Z)",
}
`;

exports[`events CRUD > returns 404 for unknown events 1`] = `
{
  "body": {
    "error": "string",
    "success": "boolean",
  },
  "status": 404,
}
`;

exports[`events CRUD > updates fields and replaces sponsors 1`] = `
{
  "body": {
    "data": {
      "broadcast_station": {
        "active": "boolean",
        "contact_email": "null",
        "contact_person": "null",
        "contact_phone": "null",
        "created_at": "datetime(.000000Z)",
        "id": "uuid",
        "image": "null",
        "logo_url": "string",
        "name": "string",
        "reach": "string",
        "stream_url": "null",
        "type": "string",
        "updated_at": "datetime(.000000Z)",
        "website_url": "null",
      },
      "broadcast_station_id": "uuid",
      "broadcast_station_logo_url": "string",
      "broadcast_station_name": "string",
      "created_at": "datetime(.000000Z)",
      "date": "datetime(.000000Z)",
      "description": "string",
      "end_date": "datetime(.000000Z)",
      "eventType": "string",
      "event_type": "string",
      "expectedParticipants": "number",
      "expected_participants": "number",
      "id": "uuid",
      "image": "string",
      "isTournament": "boolean",
      "is_tournament": "boolean",
      "kkf_approval_date": "null",
      "kkf_approved_by": "null",
      "location": "string",
      "main_sponsor": {
        "active": "boolean",
        "contact_email": "null",
        "contact_person": "null",
        "contact_phone": "null",
        "created_at": "datetime(.000000Z)",
        "id": "uuid",
        "image": "null",
        "industry": "null",
        "logo_url": "string",
        "name": "string",
        "tier": "string",
        "updated_at": "datetime(.000000Z)",
        "website_url": "null",
      },
      "main_sponsor_id": "uuid",
      "main_sponsor_logo_url": "string",
      "main_sponsor_name": "string",
      "name": "string",
      "organizer": {
        "club_id": "null",
        "created_at": "datetime(.000000Z)",
        "email": "string",
        "full_name": "string",
        "id": "uuid",
        "last_login": "datetime(sql)",
        "role": "string",
        "status": "string",
        "updated_at": "datetime(.000000Z)",
        "username": "string",
      },
      "organizer_id": "uuid",
      "organizer_name": "string",
      "sponsorIds": [
        "uuid",
      ],
      "sponsors": [
        {
          "active": "boolean",
          "contact_email": "null",
          "contact_person": "null",
          "contact_phone": "null",
          "created_at": "datetime(.000000Z)",
          "id": "uuid",
          "image": "null",
          "industry": "null",
          "logo_url": "null",
          "name": "string",
          "pivot": {
            "event_id": "uuid",
            "sponsor_id": "uuid",
          },
          "tier": "string",
          "updated_at": "datetime(.000000Z)",
          "website_url": "null",
        },
      ],
      "status": "string",
      "tournamentFormat": "string",
      "tournamentWeightClass": "string",
      "tournament_format": "string",
      "tournament_weight_class": "string",
      "updated_at": "datetime(.000000Z)",
    },
    "success": "boolean",
  },
  "status": 200,
}
`;

exports[`events permissions > club cannot create or update events 1`] = `
{
  "body": {
    "error": "string",
    "success": "boolean",
  },
  "status": 403,
}
`;

exports[`events permissions > referee cannot create or update events 1`] = `
{
  "body": {
    "error": "string",
    "success": "boolean",
  },
  "status": 403,
}
`;
